k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dpig
  labels:
    app.kubernetes.io/name: dpig
    app.kubernetes.io/part-of: digital-public-infrastructure
